# quilbert

./: README.md  setup.cfg  tox.ini
.github/workflows/: pylint.yml
src/quilbert/: __main__.py  quilbert.py
tests/: audio.pcm  test_quilbert.py
