[metadata]
name = quilbert 
version = 0.0.1
author = James Rowland
author_email = rowland.208@gmail.com
description = Friendly ai voice assistant
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rowland-208/quilbert
project_urls =
    Bug Tracker = https://github.com/rowland-208/quilbert/issues
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10

[options]
install_requires =
    openai==0.27.2
    openai-whisper==20230314
    numpy==1.23.5
    pvcobra==1.2.0
    pvporcupine==2.1.4
    PyAudio==0.2.13
    pyttsx3==2.90
    python-statemachine==2.0.0

package_dir =
    = src
packages = find:
python_requires = >=3.10

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    quilbert = quilbert.__main__:main
